fintech-k8s-act3/kubernetes-yaml/02_backend-deployment.yaml
# kubernetes-yaml/02_backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: fintech-app
    tier: backend
spec:
  replicas: 2 # Escalamiento: 2 copias para resiliencia
  selector:
    matchLabels:
      app: fintech-app
      tier: backend
  template:
    metadata:
      labels:
        app: fintech-app
        tier: backend
    spec:
      containers:
      - name: backend-container
        # **¡IMPORTANTE!** Reemplaza 'tu-usuario' por tu usuario real de Docker Hub/ECR
        image: jfcpjimmy/fintech-backend:1.0 
        ports:
        - containerPort: 3000
        # Configuración de variables de conexión a la DB
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
