fintech-k8s-act3/kubernetes-yaml/01_mysql-statefulset.yaml
# 3. Headless Service para la DB (Permite que StatefulSet funcione)
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    app: mysql-db
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mysql-db
  clusterIP: None 
---
# 4. StatefulSet (Carga de trabajo para la DB con estado)
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-db
spec:
  serviceName: "mysql-service"
  replicas: 1
  selector:
    matchLabels:
      app: mysql-db
  template:
    metadata:
      labels:
        app: mysql-db
    spec:
      containers:
      - name: mysql-db
        image: mysql:8.0 # Imagen base de MySQL
        ports:
        - containerPort: 3306
        # Cargar variables de entorno desde el Secret
        volumeMounts:
          # Montaje para los datos persistentes
          - name: mysql-persistent-storage
            mountPath: /var/lib/mysql
          # Montaje para el script de inicialización
          - name: initdb-config
            mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: initdb-config
          configMap:
            name: mysql-init-script
  # 5. Definición de Almacenamiento (Persistent Volume Claim Template)
  volumeClaimTemplates:
  - metadata:
      name: mysql-persistent-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          # Solicita 5 GB. AWS EKS usará el Default StorageClass (EBS).
          storage: 5Gi
